--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的網頁</title>
+    <title>我的自介網頁</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,14 +33,23 @@
 </head>
 <body>
     <header>
-        <h1>歡迎來到我的網頁</h1>
+        <h1>歡迎來到我的自介網頁</h1>
     </header>
     <div class="container">
-        <h2>關於我們</h2>
-        <p>這是一個示範性的網頁，用來展示基本的 HTML 結構和一些簡單的 CSS 樣式。</p>
+        <h2>關於我</h2>
+        <p>大家好，我叫張三，是一位網頁開發者。我喜歡創建美觀且實用的網站，並持續學習新的前端技術。</p>
+        
+        <h2>個人資訊</h2>
+        <ul>
+            <li><strong>姓名：</strong> 張三</li>
+            <li><strong>職業：</strong> 網頁開發者</li>
+            <li><strong>所在地：</strong> 台北市</li>
+            <li><strong>Email：</strong> zhangsan@example.com</li>
+            <li><strong>GitHub：</strong> <a href="https://github.com/zhangsan">zhangsan</a></li>
+        </ul>
     </div>
     <footer>
-        <p>&copy; 2023 我的網頁. All rights reserved.</p>
+        <p>&copy; 2023 我的自介網頁. All rights reserved.</p>
     </footer>
 </body>
 </html>
