--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的自介網頁</title>
+    <title>My Resume</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,6 +25,12 @@
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+        section {
+            margin-bottom: 1.5rem;
+        }
+        h2 {
+            margin-top: 0;
+        }
         footer {
             text-align: center;
             padding: 1rem;
@@ -33,23 +39,44 @@
 </head>
 <body>
     <header>
-        <h1>歡迎來到我的自介網頁</h1>
+        <h1>My Resume</h1>
     </header>
     <div class="container">
-        <h2>關於我</h2>
-        <p>大家好，我叫張三，是一位網頁開發者。我喜歡創建美觀且實用的網站，並持續學習新的前端技術。</p>
-        
-        <h2>個人資訊</h2>
-        <ul>
-            <li><strong>姓名：</strong> 張三</li>
-            <li><strong>職業：</strong> 網頁開發者</li>
-            <li><strong>所在地：</strong> 台北市</li>
-            <li><strong>Email：</strong> zhangsan@example.com</li>
-            <li><strong>GitHub：</strong> <a href="https://github.com/zhangsan">zhangsan</a></li>
-        </ul>
+        <section>
+            <h2>Personal Information</h2>
+            <p><strong>Name：</strong> Chia-Wei Hsieh</p>
+            <p><strong>Phone number：</strong> 0965101580</p>
+            <p><strong>Email：</strong> david9106432@gmail.com</p>
+            <p><strong>Location：</strong> Kaohsiung city</p>
+            <p><strong>GitHub：</strong> <a href="https://github.com/novtwadmo">novtwadmo</a></p>
+        </section>
+        <section>
+            <h2>Professional Profile</h2>
+            <p>I am an engineer who loves the field of artificial intelligence, has rich experience in machine learning and deep learning, and is good at using data analysis to solve practical problems.</p>
+        </section>
+        <section>
+            <h2>Education Background</h2>
+            <p><strong>Master's degree：</strong> Computer Science and Information Engineering，National University of Kaohsiung，2023</p>
+            <p><strong>Bachelor's degree：</strong> Department of Computer Science，National University of Pingtung，2020</p>
+        </section>
+        <section>
+            <h2>Work Experience</h2>
+            <p><strong>Looking for a job</strong></p> 
+        </section>
+        <section>
+            <h2>Professional Skill</h2>
+            <ul>
+                <li>Machine Learning：Deep Learning, Reinforcement Learning.</li>
+                <li>Computer Vision：Image Classification, Object Detection, Image Segmentation.</li>
+                <li>Programming Language：Python, Java, C++.</li>
+                <li>Tools and Frameworks：TensorFlow, PyTorch, Scikit-learn.</li>
+                <li>Natural Language Processing：Sentiment Analysis, Text Generation.</li>
+                <li>Database：SQL, NoSQL。</li>
+            </ul>
+        </section>
     </div>
     <footer>
-        <p>&copy; 2023 我的自介網頁. All rights reserved.</p>
+        <p>&copy; 2023 AI engineer resume. All rights reserved.</p>
     </footer>
 </body>
 </html>
